--- a/public_html/css/estilos.css
+++ b/public_html/css/estilos.css
@@ -6,12 +6,16 @@
         Purpose of the stylesheet follows.
 */
 
+/* Reseteo universol*/
 *{
+    border: 0;
     margin: 0;
     padding: 0;
 }
 
-
+article, figcaption, figure, header, hgroup, nav, section {
+    display: block;
+}
 
 
 @font-face {
@@ -42,22 +46,78 @@ body {
     background: #212121 url(../img/fondo.png);
     color: #FFF;
     font-family: "Chalet", sans-serif, fantasy;
-    font-size: 2em;
+    font-size: 1em;
 }
 
-h1 {
+a {
+    color: #57ABB8;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+a:hover {
     color: #F60;
-    margin: 0.25em auto;
-    text-shadow: 5px 5px 10px rgba(255, 255, 255, 0.5);
 }
 
-header, nav, footer {
-    background: #1E6381;
-    border-radius: 0.5em;
-    margin: 0.5em auto;
-    max-width: 960px;
+figcaption {
+    font-size: 0.85em;
     padding: 0.25em;
     text-align: center;
+}
+
+img, video {
+    max-width: 100%;
+}
+
+header, section#contenedor, footer {
+    background: #FFF url(../img/fondo-interno.jpg);
+    margin: 0 auto;
+    max-width: 90%;
+    text-align: center;
+}
+
+header h1, nav {
+    display: inline-block;
+    max-width: 100%;
+    vertical-align: middle;
+}
+
+nav ul{
+    list-style: none;
+}
+
+nav li {
+    display: inline-block;
+    padding: 0.1em;
+    vertical-align: top;
+}
+
+nav a {
+    background: #FFF;
+    border: 0.1em solid #57ABB8;
+    border-radius: 0.25em;
+    color: #F60;
+    display: block;
+    font-family: "Pecita", Helvetica, Verdana;
+    font-size: 1.4em;
+    padding: 0.2em;
+    -ms-transition: all 0.5s ease-in;
+    -moz-transition: all 0.5s ease-in;
+    -o-transition: all 0.5s ease-in;
+    -webkit-transition: all 0.5s ease-in;
+    transition: all 0.5s ease-in;
+}
+
+nav a:hover {
+    background: #212121;
+    border: 0.1em dashed #F60;
+    border-radius: 0 0.5em 0 0.5em;
+    color: #FFF;
+    -ms-transition: all 0.5s ease-out;
+    -moz-transition: all 0.5s ease-out;
+    -o-transition: all 0.5s ease-out;
+    -webkit-transition: all 0.5s ease-out;
+    transition: all 0.5s ease-out;
 }
 
 section#contenedor {
@@ -72,24 +132,101 @@ section#principal, aside {
     background: #1E6381;
     border-radius: 0.5em;
     display: inline-block;
-    margin: 0.25em auto;
-    max-width: 960px;
-    min-height: 200px;
+    margin: 0 auto;
+    max-width: 100%;
     padding: 0.25em;
-    text-align: center;
     vertical-align: top;
     width: 65%;
 }
 
-article {
-    background: #011E30;
+article#galeria-inicio {
     border-radius: 0.5em;
-    min-height: 140px;
-    padding: 0.25em;
+    margin: 0.5em;
+    padding: 0.5em;
+    text-align: left;
+    width: 95%;
 }
 
 aside {
     width: 30%;
+}
+
+aside img {
+    border-radius: 0.5em;
+}
+
+footer {
+    color: #000;
+    font-size: 0.85em;
+    padding: 0.75em 0;
+}
+
+.fade {
+    opacity: 1;
+    filter: alpha(opacity=10);
+    -ms-transition: all 0.5s ease-in;
+    -moz-transition: all 0.5s ease-in;
+    -o-transition: all 0.5s ease-in;
+    -webkit-transition: all 0.5s ease-in;
+    transition: all 0.5s ease-in;
+}
+
+.fade:hover {
+    opacity: 0.7;
+    filter: alpha(opacity=7);
+    -ms-transition: all 0.5s ease-out;
+    -moz-transition: all 0.5s ease-out;
+    -o-transition: all 0.5s ease-out;
+    -webkit-transition: all 0.5s ease-out;
+    transition: all 0.5s ease-out;
+}
+
+@media(min-width:1081px){
+    header h1 {
+        text-align: left;
+        width: 35%;
+    }
+    nav {
+        text-align: right;
+        width: 60%;
+    }
+}
+
+@media(max-width:1081px){
+    nav li {
+        font-size: 1.3em;
+    }
+    article#galeria-inicio {
+        width: 90%;
+    }
+    aside {
+        width: 20%;
+    }
+}
+
+@media(max-width:800px){
+    nav li {
+        font-size: 0.95em;
+    }
+    article#galeria-inicio {
+        width: 88%;
+    }
+}
+
+@media(max-width:600px){
+    nav li {
+        display: inline-block;
+        margin: 0px;
+        width: 98%;
+        
+    }
+    section#principal {
+        margin-bottom: 0.2em;
+    }
+    section#principal, aside {
+        display: block;
+        width: 95%;
+    }
 }
 
 root { 
